--- a/templates/index.html
+++ b/templates/index.html
@@ -132,8 +132,8 @@
                                 </li>
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
-                                    <strong>Website:</strong>
-                                    <a href="http://Book-store.uz" class="text-light">Book-store.uz</a>
+                                    <strong>github:</strong>
+                                    <a href="https://github.com/safarbek0227/" class="text-light">@safarbek0227</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
@@ -157,7 +157,7 @@
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
                                     <strong>degree:</strong>
-                                    <span>Middle</span>
+                                    <span>Junior</span>
                                 </li>
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
