--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
                                     <strong>Freelance:</strong>
-                                    <span>Aviable</span>
+                                    <span>available</span>
                                 </li>
                             </ul>
                         </div>
