--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="/static/css/freamwork/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/freamwork/aos/aos.css">
@@ -167,7 +166,7 @@
                                 <li>
                                     <i class="fas fa-chevron-right"></i> 
                                     <strong>Freelance:</strong>
-                                    <span>Aviable</span>
+                                    <span>Available</span>
                                 </li>
                             </ul>
                         </div>
