--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="2Wk4JhCWy43fZmSy3w5p-UFLpERn91K-lTaHamvbqP0" />
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="/static/css/freamwork/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/freamwork/aos/aos.css">
